--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   font-family: "Nunito", sans-serif;
   outline: none;
   border: none;
+  text-decoration: none;
 }
 
 body {
@@ -37,10 +38,9 @@ button:hover {
   background-color: #577cf6;
 }
 
-.card {
+.card-form {
   width: 100%;
   height: 100%;
-  z-index: 99999;
   background-color: #2828294d;
   display: none;
   align-items: center;
@@ -48,9 +48,10 @@ button:hover {
   padding: 20px;
   position: absolute;
   top: 0;
+  z-index: 999999;
 }
 
-.card-box {
+.card-form-box {
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -82,8 +83,8 @@ input::placeholder {
 
 .flashcards {
   display: flex;
-  justify-content: center;
   align-items: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   width: 100%;
   margin: auto;
@@ -133,12 +134,22 @@ input::placeholder {
   top: 0;
   left: 0;
   margin: 7px;
-  border-radius: 50%;
+}
+
+footer{
+  font-size: .85rem;
+  padding: 8px;
+}
+
+footer a {
+  color: #3e63dd;
 }
 
 @media (max-width: 768px) {
   .flashcard {
-    margin: 10px auto;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
   }
 }
 @media (max-width: 480px) {
@@ -146,8 +157,8 @@ input::placeholder {
     flex-direction: column;
     gap: 10px;
   }
-  .card-box,
-  .flashcard {
+  .flashcard,
+  .card-form {
     width: 100%;
   }
 }
